--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -1,19 +1,174 @@
 <!DOCTYPE html>
-<html>
-    <head>
-        <meta charset="UTF-8">
-        <title>{% block title %}Welcome!{% endblock %}</title>
-        <link rel="icon" href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 128 128%22><text y=%221.2em%22 font-size=%2296%22>⚫️</text></svg>">
-        {# Run `composer require symfony/webpack-encore-bundle` to start using Symfony UX #}
-        {% block stylesheets %}
-            {{ encore_entry_link_tags('app') }}
-        {% endblock %}
+<html lang="{{ app.request.locale }}">
+<head>
+    <meta charset="UTF-8">
+    <title>{% block title %}{{ 'welcome.title'|trans }}{% endblock %}</title>
+    <link href="{{ asset('css/bootstrap.min.css') }}" rel="stylesheet">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
-        {% block javascripts %}
-            {{ encore_entry_script_tags('app') }}
-        {% endblock %}
-    </head>
-    <body>
-        {% block body %}{% endblock %}
-    </body>
+    {% block stylesheets %}{% endblock %}
+    <link rel="icon" type="image/x-icon" href="{{ asset('images/favicon-judoclub-erfurt.png') }}"/>
+    <script src="{{ asset('js/bootstrap.bundle.min.js') }}"></script>
+    <script src="https://kit.fontawesome.com/f0d5ec1ada.js"></script>
+    <script src="{{ asset('js/jquery-3.6.1.slim.min.js') }}" type="text/javascript"></script>
+</head>
+<body>
+<nav class="navbar navbar-expand-lg navbar-dark bg-primary p-0" aria-label="site navigation">
+    <div class="container-fluid">
+        <a class="navbar-brand" href="{{ path('welcome') }}">
+            <img src="{{ asset('images/favicon-judoclub-erfurt.png') }}" width="50" alt="EJC"/>
+        </a>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+                aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNav">
+            <ul class="navbar-nav me-auto">
+                <li class="nav-item">
+                    <a class="nav-link" href="{{ path('welcome') }}">{{ 'base.menu.home'|trans }}</a>
+                </li>
+{#                {% if is_granted('IS_AUTHENTICATED_FULLY') %}#}
+{#                    <li class="nav-item">#}
+{#                        <a class="nav-link"#}
+{#                           href="{{ path('registration_edit') }}">{{ 'base.menu.registration_edit'|trans }}</a>#}
+{#                    </li>#}
+{#                    <li class="nav-item">#}
+{#                        <a class="nav-link" href="{{ path('officials') }}">{{ 'base.menu.officials'|trans }}</a>#}
+{#                    </li>#}
+{#                    <li class="nav-item">#}
+{#                        <a class="nav-link" href="{{ path('contestants') }}">{{ 'base.menu.contestants'|trans }}</a>#}
+{#                    </li>#}
+
+{#                    {% if app.user.invoices|filter(invoice => invoice.published) is empty %}#}
+{#                        <li class="nav-item">#}
+{#                            <a class="nav-link disabled">{{ 'base.menu.invoices'|trans }}</a>#}
+{#                        </li>#}
+{#                    {% else %}#}
+{#                        <li class="nav-item dropdown">#}
+{#                            <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown"#}
+{#                               aria-expanded="false">#}
+{#                                {{ 'base.menu.invoices'|trans }}#}
+{#                            </a>#}
+{#                            <ul class="dropdown-menu">#}
+{#                                {% for invoice in app.user.invoices|filter(invoice => invoice.published) %}#}
+{#                                    <li>#}
+{#                                        <a class="dropdown-item"#}
+{#                                           href="{{ path('invoice_show', {'id': invoice.id}) }}">#}
+{#                                            {{ invoice.subId }} {{ invoice.name }}#}
+{#                                        </a>#}
+{#                                    </li>#}
+{#                                {% endfor %}#}
+{#                            </ul>#}
+{#                        </li>#}
+{#                    {% endif %}#}
+{#                    {% if is_granted('ROLE_ADMIN') %}#}
+{#                        <li class="nav-item dropdown">#}
+{#                            <a class="nav-link link-warning dropdown-toggle" href="#"#}
+{#                               role="button" data-bs-toggle="dropdown" aria-expanded="false">#}
+{#                                {{ 'base.menu.admin.title'|trans }}#}
+{#                            </a>#}
+{#                            <ul class="dropdown-menu">#}
+{#                                <li>#}
+{#                                    <a class="dropdown-item" href="{{ path('admin_index') }}">#}
+{#                                        {{ 'base.menu.admin.index'|trans }}#}
+{#                                    </a>#}
+{#                                </li>#}
+{#                                <li>#}
+{#                                    <a class="dropdown-item" href="{{ path('admin_contestants') }}">#}
+{#                                        {{ 'base.menu.admin.contestants'|trans }}#}
+{#                                    </a>#}
+{#                                </li>#}
+{#                                <li>#}
+{#                                    <a class="dropdown-item" href="{{ path('admin_officials') }}">#}
+{#                                        {{ 'base.menu.admin.officials'|trans }}#}
+{#                                    </a>#}
+{#                                </li>#}
+{#                            </ul>#}
+{#                        </li>#}
+{#                    {% endif %}#}
+{#                {% else %}#}
+{#                    <li class="nav-item">#}
+{#                        <a class="nav-link" href="{{ path('registration_new') }}">{{ 'base.menu.register'|trans }}</a>#}
+{#                    </li>#}
+{#                {% endif %}#}
+{#                <li class="nav-item">#}
+{#                    {% if is_granted('IS_IMPERSONATOR') %}#}
+{#                        <a class="nav-link link-warning" href="{{ impersonation_exit_path(path('admin_index') ) }}">{{ 'base.menu.exit-impersonation'|trans }}</a>#}
+{#                        #}{#                    {% if is_granted('ROLE_PREVIOUS_ADMIN') %} #}
+{#                        #}{#                        <a class="nav-link badge-warning" #}
+{#                        #}{#                           href="{{ path('admin', {'_switch_user': '_exit'}) }}">{{ 'menu.logout'|trans }}</a> #}
+{#                    {% elseif is_granted('IS_AUTHENTICATED_FULLY') %}#}
+{#                        <a class="nav-link" href="{{ path('logout') }}">{{ 'base.menu.logout'|trans }}</a>#}
+{#                    {% else %}#}
+{#                        <a class="nav-link" href="{{ path('login') }}">{{ 'base.menu.login'|trans }}</a>#}
+{#                    {% endif %}#}
+{#                </li>#}
+                <li class="nav-item dropdown">
+                    <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown"
+                       aria-expanded="false">
+                        <img class="mb-2" src="{{ asset('images/Flag_of_%s.svg'|format(app.request.locale|upper)) }}"
+                             height="15" alt="{{ app.request.locale|upper }}"/>
+                    </a>
+                    <ul class="dropdown-menu">
+                        <li>
+                            <a class="dropdown-item"
+                               href="{{ path(app.request.get('_route',  'welcome'), app.request.attributes.get('_route_params')|merge({_locale:'de'})) }}">
+                                <img class="mb-2" src="{{ asset('images/Flag_of_DE.svg') }}" height="15" alt="DEU"/>
+                                {{ 'base.language.de'|trans }}
+                            </a>
+                        </li>
+                        <li>
+                            <a class="dropdown-item"
+                               href="{{ path(app.request.get('_route',  'welcome'), app.request.attributes.get('_route_params')|merge({_locale:'en'})) }}">
+                                <img class="mb-2" src="{{ asset('images/Flag_of_EN.svg') }}" height="15" alt="ENG"/>
+                                {{ 'base.language.en'|trans }}
+                            </a>
+                        </li>
+                    </ul>
+                </li>
+
+            </ul>
+        </div>
+    </div>
+</nav>
+<main role="main" class="container">
+{#    {% if accommodation.getCurrentLimit < 50 %}#}
+{#        <div class="alert alert-danger" role="alert">#}
+{#            {{ 'base.alert.accommodation'|trans|raw }}#}
+{#        </div>#}
+{#    {% endif %}#}
+{#    {% if date('now', 'Europe/Paris') > date(deadline, 'Europe/Paris') %}#}
+{#        <div class="alert alert-danger" role="alert">#}
+{#            {{ 'base.alert.deadline'|trans }}#}
+{#        </div>#}
+{#    {% endif %}#}
+    {% block body %}{% endblock %}
+</main>
+
+<nav class="navbar navbar-expand-lg fixed-bottom navbar-light bg-light" aria-label="language menu">
+    <div class="container-fluid">
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+                aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNav">
+            <ul class="navbar-nav me-auto">
+                <li class="nav-item">
+                    <a class="nav-link active"
+                       href="https://thueringer-judoverband.de/home/">{{ 'base.link-text.homepage'|trans }}</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link active"
+                       href="https://www.thueringer-judoverband.de/navigation-footer/impressum/">{{ 'base.link-text.about-us'|trans }}</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link active"
+                       href="https://www.thueringer-judoverband.de/links/datenschutz/">{{ 'base.link-text.privacy'|trans }}</a>
+                </li>
+            </ul>
+        </div>
+    </div>
+</nav>
+</body>
+{% block javascript %}{% endblock %}
 </html>
