adapt links in footer to point to EJC homepage

--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -155,15 +155,15 @@
             <ul class="navbar-nav me-auto">
                 <li class="nav-item">
                     <a class="nav-link active"
-                       href="https://thueringer-judoverband.de/home/">{{ 'base.link-text.homepage'|trans }}</a>
+                       href="https://erfurter-judo-club.de/">{{ 'base.link-text.homepage'|trans }}</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link active"
-                       href="https://www.thueringer-judoverband.de/navigation-footer/impressum/">{{ 'base.link-text.about-us'|trans }}</a>
+                       href="https://erfurter-judo-club.de/impressum">{{ 'base.link-text.about-us'|trans }}</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link active"
-                       href="https://www.thueringer-judoverband.de/links/datenschutz/">{{ 'base.link-text.privacy'|trans }}</a>
+                       href="https://erfurter-judo-club.de/datenschutz">{{ 'base.link-text.privacy'|trans }}</a>
                 </li>
             </ul>
         </div>
