--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -86,23 +86,21 @@
 {#                            </ul>#}
 {#                        </li>#}
 {#                    {% endif %}#}
+                    <a class="nav-link" href="{{ path('logout') }}">{{ 'base.menu.logout'|trans }}</a>
                 {% else %}
                     <li class="nav-item">
                         <a class="nav-link" href="{{ path('registration_new') }}">{{ 'base.menu.register'|trans }}</a>
                     </li>
+                    <a class="nav-link" href="{{ path('login') }}">{{ 'base.menu.login'|trans }}</a>
                 {% endif %}
-{#                <li class="nav-item">#}
+                <li class="nav-item">
 {#                    {% if is_granted('IS_IMPERSONATOR') %}#}
 {#                        <a class="nav-link link-warning" href="{{ impersonation_exit_path(path('admin_index') ) }}">{{ 'base.menu.exit-impersonation'|trans }}</a>#}
 {#                        #}{#                    {% if is_granted('ROLE_PREVIOUS_ADMIN') %} #}
 {#                        #}{#                        <a class="nav-link badge-warning" #}
 {#                        #}{#                           href="{{ path('admin', {'_switch_user': '_exit'}) }}">{{ 'menu.logout'|trans }}</a> #}
-{#                    {% elseif is_granted('IS_AUTHENTICATED_FULLY') %}#}
-{#                        <a class="nav-link" href="{{ path('logout') }}">{{ 'base.menu.logout'|trans }}</a>#}
-{#                    {% else %}#}
-{#                        <a class="nav-link" href="{{ path('login') }}">{{ 'base.menu.login'|trans }}</a>#}
 {#                    {% endif %}#}
-{#                </li>#}
+                </li>
                 <li class="nav-item dropdown">
                     <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown"
                        aria-expanded="false">
