--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -28,10 +28,11 @@
                     <a class="nav-link" href="{{ path('welcome') }}">{{ 'base.menu.home'|trans }}</a>
                 </li>
                 {% if is_granted('IS_AUTHENTICATED_FULLY') %}
-{#                    <li class="nav-item">#}
-{#                        <a class="nav-link"#}
-{#                           href="{{ path('registration_edit') }}">{{ 'base.menu.registration_edit'|trans }}</a>#}
-{#                    </li>#}
+                    <li class="nav-item">
+                        <a class="nav-link" href="{{ path('registration_edit') }}">
+                            {{ 'base.menu.registration_edit'|trans }}
+                        </a>
+                    </li>
                     <li class="nav-item dropdown">
                         <a class="nav-link dropdown-toggle" href="#"
                            role="button" data-bs-toggle="dropdown" aria-expanded="false">
