--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -61,68 +61,46 @@
                             </a>
                         </div>
                     </li>
-
-{#                    {% if app.user.invoices|filter(invoice => invoice.published) is empty %}#}
-{#                        <li class="nav-item">#}
-{#                            <a class="nav-link disabled">{{ 'base.menu.invoices'|trans }}</a>#}
-{#                        </li>#}
-{#                    {% else %}#}
-{#                        <li class="nav-item dropdown">#}
-{#                            <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown"#}
-{#                               aria-expanded="false">#}
-{#                                {{ 'base.menu.invoices'|trans }}#}
-{#                            </a>#}
-{#                            <ul class="dropdown-menu">#}
-{#                                {% for invoice in app.user.invoices|filter(invoice => invoice.published) %}#}
-{#                                    <li>#}
-{#                                        <a class="dropdown-item"#}
-{#                                           href="{{ path('invoice_show', {'id': invoice.id}) }}">#}
-{#                                            {{ invoice.subId }} {{ invoice.name }}#}
-{#                                        </a>#}
-{#                                    </li>#}
-{#                                {% endfor %}#}
-{#                            </ul>#}
-{#                        </li>#}
-{#                    {% endif %}#}
-{#                    {% if is_granted('ROLE_ADMIN') %}#}
-{#                        <li class="nav-item dropdown">#}
-{#                            <a class="nav-link link-warning dropdown-toggle" href="#"#}
-{#                               role="button" data-bs-toggle="dropdown" aria-expanded="false">#}
-{#                                {{ 'base.menu.admin.title'|trans }}#}
-{#                            </a>#}
-{#                            <ul class="dropdown-menu">#}
-{#                                <li>#}
-{#                                    <a class="dropdown-item" href="{{ path('admin_index') }}">#}
-{#                                        {{ 'base.menu.admin.index'|trans }}#}
-{#                                    </a>#}
-{#                                </li>#}
-{#                                <li>#}
-{#                                    <a class="dropdown-item" href="{{ path('admin_contestants') }}">#}
-{#                                        {{ 'base.menu.admin.contestants'|trans }}#}
-{#                                    </a>#}
-{#                                </li>#}
-{#                                <li>#}
-{#                                    <a class="dropdown-item" href="{{ path('admin_officials') }}">#}
-{#                                        {{ 'base.menu.admin.officials'|trans }}#}
-{#                                    </a>#}
-{#                                </li>#}
-{#                            </ul>#}
-{#                        </li>#}
-{#                    {% endif %}#}
-                    <a class="nav-link" href="{{ path('logout') }}">{{ 'base.menu.logout'|trans }}</a>
+                    {% if is_granted('ROLE_ADMIN') %}
+                        <li class="nav-item dropdown">
+                            <a class="nav-link link-warning dropdown-toggle" href="#"
+                               role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                                {{ 'base.menu.admin.title'|trans }}
+                            </a>
+                            <ul class="dropdown-menu">
+                                <li>
+                                    <a class="dropdown-item" href="{{ path('admin_index') }}">
+                                        {{ 'base.menu.admin.index'|trans }}
+                                    </a>
+                                </li>
+                                <li>
+                                    <a class="dropdown-item" href="{{ path('admin_messe') }}">
+                                        {{ 'base.menu.admin.messe'|trans }}
+                                    </a>
+                                </li>
+                                <li>
+                                    <a class="dropdown-item" href="{{ path('admin_ega') }}">
+                                        {{ 'base.menu.admin.ega'|trans }}
+                                    </a>
+                                </li>
+                            </ul>
+                        </li>
+                    {% endif %}
                 {% else %}
                     <li class="nav-item">
                         <a class="nav-link" href="{{ path('registration_new') }}">{{ 'base.menu.register'|trans }}</a>
                     </li>
-                    <a class="nav-link" href="{{ path('login') }}">{{ 'base.menu.login'|trans }}</a>
                 {% endif %}
                 <li class="nav-item">
-{#                    {% if is_granted('IS_IMPERSONATOR') %}#}
-{#                        <a class="nav-link link-warning" href="{{ impersonation_exit_path(path('admin_index') ) }}">{{ 'base.menu.exit-impersonation'|trans }}</a>#}
-{#                        #}{#                    {% if is_granted('ROLE_PREVIOUS_ADMIN') %} #}
-{#                        #}{#                        <a class="nav-link badge-warning" #}
-{#                        #}{#                           href="{{ path('admin', {'_switch_user': '_exit'}) }}">{{ 'menu.logout'|trans }}</a> #}
-{#                    {% endif %}#}
+                    {% if is_granted('IS_IMPERSONATOR') %}
+                    <a class="nav-link link-warning" href="{{ impersonation_exit_path(path('admin_index') ) }}">
+                        {{ 'base.menu.exit-impersonation'|trans }}
+                    </a>
+                    {% elseif is_granted('IS_AUTHENTICATED_FULLY') %}
+                        <a class="nav-link" href="{{ path('logout') }}">{{ 'base.menu.logout'|trans }}</a>
+                    {% else %}
+                        <a class="nav-link" href="{{ path('login') }}">{{ 'base.menu.login'|trans }}</a>
+                    {% endif %}
                 </li>
                 <li class="nav-item dropdown">
                     <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown"
