--- a/templates/registration/edit.html.twig
+++ b/templates/registration/edit.html.twig
@@ -7,7 +7,7 @@
         <div class="p-5 mb-4 bg-light rounded-3">
             <h1 class="display-4">{{ 'registration.edit.title'|trans }}</h1>
             <p class="lead">{{ 'registration.edit.description'|trans }}</p>
-            <a class="btn btn-outline-primary" href="{{ path('registration_edit_password') }}">Passwort ändern</a>
+            <a class="btn btn-outline-primary" href="{{ path('registration_edit_password') }}">{{ 'registration.edit.password.title'|trans }}</a>
             <form style="display: inline" method="post" action="{{ path('registration_delete', {'id': registration.id}) }}"
                   onsubmit="return confirm('{{ 'registration.edit.confirm-delete'|trans({'club': registration.club}) }}');">
                 <button class="btn btn-danger">{{ 'registration.edit.delete'|trans }}</button>
