--- a/templates/registration/edit_password.html.twig
+++ b/templates/registration/edit_password.html.twig
@@ -1,12 +1,12 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}{{ 'registration.edit_password.title'|trans }}{% endblock %}
+{% block title %}{{ 'registration.edit.password.title'|trans }}{% endblock %}
 
 {% block body %}
     <div class="container">
         <div class="p-5 mb-4 bg-light rounded-3">
-            <h1 class="display-4">{{ 'registration.edit_password.title'|trans }}</h1>
-            <p class="lead">{{ 'registration.edit_password.description'|trans }}</p>
+            <h1 class="display-4">{{ 'registration.edit.password.title'|trans }}</h1>
+            <p class="lead">{{ 'registration.edit.password.description'|trans }}</p>
             <hr class="my-4">
             {{ form_start(registrationForm) }}
             {{ form_row(registrationForm._token) }}
