--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -153,16 +153,19 @@
         <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav me-auto">
                 <li class="nav-item">
-                    <a class="nav-link active"
-                       href="https://erfurter-judo-club.de/">{{ 'base.link-text.homepage'|trans }}</a>
+                    <a class="nav-link" href="{{ 'base.footer.homepage.link'|trans }}">
+                        {{ 'base.footer.homepage.title'|trans }}
+                    </a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link active"
-                       href="https://erfurter-judo-club.de/impressum">{{ 'base.link-text.about-us'|trans }}</a>
+                    <a class="nav-link" href="{{ 'base.footer.about-us.link'|trans }}">
+                        {{ 'base.footer.about-us.title'|trans }}
+                    </a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link active"
-                       href="https://erfurter-judo-club.de/datenschutz">{{ 'base.link-text.privacy'|trans }}</a>
+                    <a class="nav-link" href="{{ 'base.footer.privacy.link'|trans }}">
+                        {{ 'base.footer.privacy.title'|trans }}
+                    </a>
                 </li>
             </ul>
         </div>
