--- a/templates/welcome/index.html.twig
+++ b/templates/welcome/index.html.twig
@@ -11,16 +11,17 @@
                 <div class="alert alert-danger" role="alert">{{ 'welcome.end-date-passed'|trans }}</div>
             {% endif %}
             <hr class="my-4">
-{#            <a class="btn btn-primary float-left"#}
-{#               href="{{ path('registration_send_confirmation', {'id': registration.id}) }}">#}
-{#                {{ 'welcome.overview.send-confirmation'|trans }}#}
-{#            </a>#}
-{#            <hr class="my-4">#}
+            {#            <a class="btn btn-primary float-left" #}
+            {#               href="{{ path('registration_send_confirmation', {'id': registration.id}) }}"> #}
+            {#                {{ 'welcome.overview.send-confirmation'|trans }} #}
+            {#            </a> #}
+            {#            <hr class="my-4"> #}
             <div class="row row-cols-1 row-cols-md-2">
                 <div class="col">
                     <div class="card">
                         <div class="card-body">
-                            <h5 class="card-title">{{ 'welcome.overview.contestant.messe'|trans }} - {{ 'contestant.data.gender.female'|trans }}</h5>
+                            <h5 class="card-title">{{ 'welcome.overview.contestant.messe'|trans }}
+                                - {{ 'contestant.data.gender.female'|trans }}</h5>
                         </div>
                         <ul class="list-group list-group-flush">
                             {% for contestant in registration.messeFemaleContestants %}
@@ -35,7 +36,8 @@
                 <div class="col">
                     <div class="card">
                         <div class="card-body">
-                            <h5 class="card-title">{{ 'welcome.overview.contestant.messe'|trans }} - {{ 'contestant.data.gender.male'|trans }}</h5>
+                            <h5 class="card-title">{{ 'welcome.overview.contestant.messe'|trans }}
+                                - {{ 'contestant.data.gender.male'|trans }}</h5>
                         </div>
                         <ul class="list-group list-group-flush">
                             {% for contestant in registration.messeMaleContestants %}
@@ -50,7 +52,8 @@
                 <div class="col">
                     <div class="card">
                         <div class="card-body">
-                            <h5 class="card-title">{{ 'welcome.overview.contestant.ega'|trans }} - {{ 'contestant.data.gender.female'|trans }}</h5>
+                            <h5 class="card-title">{{ 'welcome.overview.contestant.ega'|trans }}
+                                - {{ 'contestant.data.gender.female'|trans }}</h5>
                         </div>
                         <ul class="list-group list-group-flush">
                             {% for contestant in registration.egaFemaleContestants %}
@@ -65,7 +68,8 @@
                 <div class="col">
                     <div class="card">
                         <div class="card-body">
-                            <h5 class="card-title">{{ 'welcome.overview.contestant.ega'|trans }} - {{ 'contestant.data.gender.male'|trans }}</h5>
+                            <h5 class="card-title">{{ 'welcome.overview.contestant.ega'|trans }}
+                                - {{ 'contestant.data.gender.male'|trans }}</h5>
                         </div>
                         <ul class="list-group list-group-flush">
                             {% for contestant in registration.egaMaleContestants %}
@@ -79,13 +83,17 @@
                 </div>
             </div>
             <hr class="my-4">
-            <p>{{ 'welcome.contact-us'|trans }}</p>
-            <p>Erfurter Judo-Club e.V.<br/>
-                In der Lutsche 10<br/>
-                99097 Erfurt<br/>
-                <a class="fa fa-phone" href="tel:0049-361-4233914"> +49 361 - 4233914</a><br/>
-                <a class="fa fa-envelope" href="mailto:info@erfurter-judo-club.de">
-                    info@erfurter-judo-club.de</a><br/>
+            <p>{{ 'welcome.contact-us.title'|trans }}</p>
+            <p>
+                {{ 'welcome.contact-us.name'|trans }}<br/>
+                {{ 'welcome.contact-us.street'|trans }}<br/>
+                {{ 'welcome.contact-us.zipcode'|trans }} {{ 'welcome.contact-us.city'|trans }}<br/>
+                <a class="fa fa-phone" href="tel:{{ 'welcome.contact-us.phone.data'|trans }}">
+                    {{ 'welcome.contact-us.phone.display'|trans }}
+                </a><br/>
+                <a class="fa fa-envelope" href="mailto:{{ 'welcome.contact-us.email'|trans }}">
+                    {{ 'welcome.contact-us.email'|trans }}
+                </a><br/>
             </p>
         </div>
     </div>
