fix export header and filtering in admin overview page

--- a/templates/admin/contestants.html.twig
+++ b/templates/admin/contestants.html.twig
@@ -24,9 +24,11 @@
     </script>
     <script>
         $(document).ready(function () {
-            let contestantsTable = $('#contestants-table')
-            let newHeight = $(window).innerHeight() - 220
-            contestantsTable.bootstrapTable('resetView', {height: newHeight})
+            let headers = $('#contestants-table thead tr th')
+            headers.each(function () {
+                    $(this).attr("data-tableexport-value", $(this).text())
+                }
+            )
         })
     </script>
 {% endblock %}
@@ -55,13 +57,13 @@
                 <caption>{{ title|trans }}</caption>
                 <thead>
                 <tr>
-                    <th data-field="last-name" data-sortable="true">
+                    <th data-field="last-name" data-sortable="true" data-filter-control="input">
                         {{ 'contestant.data.last-name'|trans }}
                     </th>
-                    <th data-field="first-name" data-sortable="true">
+                    <th data-field="first-name" data-sortable="true" data-filter-control="input">
                         {{ 'contestant.data.first-name'|trans }}
                     </th>
-                    <th data-field="club" data-sortable="true" data-field="club" data-filter-control="select">
+                    <th data-field="club" data-sortable="true" data-filter-control="select">
                         {{ 'admin.data.club'|trans }}
                     </th>
                     <th data-field="country" data-sortable="true" data-filter-control="select">
