add invoice generation
First, it is only shown in admin overview. Later, we also want to send it out to participants by mail.

--- a/templates/admin/index.html.twig
+++ b/templates/admin/index.html.twig
@@ -64,6 +64,12 @@
                                href="{{ path('welcome', {'_switch_user': registration.email }) }}">
                                 <i class="fas fa-sign-in-alt"></i>
                             </a>
+                            <a class="btn btn-info" role="button"
+                               data-toggle="tooltip" data-placement="top"
+                               title="Rechnungsdokument anschauen"
+                               href="{{ path('invoice_show', {'id': registration.id}) }}">
+                                <i class="fas fa-file-invoice-dollar"></i>
+                            </a>
                         </td>
                     </tr>
                 {% endfor %}
