fix image not displayed in invoice
For whatever reason, only in this project, there are problems with multiple slashed following each other in assert src urls. They must be removed.

--- a/templates/invoice/pdf.html.twig
+++ b/templates/invoice/pdf.html.twig
@@ -12,7 +12,7 @@
             &nbsp;<br>
         </td>
         <td>
-            <img src="{{ asset('images/Logo-Erfurter-Judoclub.jpg') }}"
+            <img src="{{ asset('images/Logo-Erfurter-Judoclub.jpg')|trim('/','left') }}"
                  height="inherit"
                  alt="Logo:EJC">
         </td>
