--- a/templates/welcome/index.html.twig
+++ b/templates/welcome/index.html.twig
@@ -11,11 +11,11 @@
                 <div class="alert alert-danger" role="alert">{{ 'welcome.end-date-passed'|trans }}</div>
             {% endif %}
             <hr class="my-4">
-            {#            <a class="btn btn-primary float-left" #}
-            {#               href="{{ path('registration_send_confirmation', {'id': registration.id}) }}"> #}
-            {#                {{ 'welcome.overview.send-confirmation'|trans }} #}
-            {#            </a> #}
-            {#            <hr class="my-4"> #}
+            <a class="btn btn-primary"
+               href="{{ path('invoice_send_mail', {'id': registration.id}) }}">
+                {{ 'welcome.overview.send-invoice'|trans }}
+            </a>
+            <hr class="my-4">
             <div class="row row-cols-1 row-cols-md-2">
                 <div class="col">
                     <div class="card">
